qmllint: Don't crash on broken QtQuick.Templates

If the QtQuick lint plugin doesn't find the types it's looking for, it
shouldn't just crash but rather warn.

Fixes: QTBUG-129194
Change-Id: I23be6c6c4561d5394d5f060951d4bbc9eca0f52c
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Dmitry Shachnev <mitya57@gmail.com>
(cherry picked from commit 9c7cee6be99bf2870c436171fde63410ffde8011)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>